Fixed layout issues in the conversation toaster that where caused by adding the close button

--- a/stylesheets/phnx.css
+++ b/stylesheets/phnx.css
@@ -764,7 +764,8 @@ span.link{
 
 .toaster-title .toaster-button.back {
 	position: relative;
-	top: -5px;
+	float: right;
+	height: 24px;
 }
 
 .convo-scroller{
